# bgd

./: README.md  docker-compose.yaml
sysbiz/: Dockerfile  README.md  pyproject.toml
sysbiz/data/: items.csv  reviews.csv  transactions.csv  users.csv
sysbiz/sysbiz/: constants.py  db.py  main.py
