[project]
name = "sysbiz"
version = "0.1.0"
description = ""
authors = [
    {name = "Michał Murawski",email = "mmurawski777@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "peewee (>=3.17.9,<4.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
